--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project membuat biodata",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node index.js"
   },
   "keywords": [
     "Biodata\u001a\u001a"
